# kdab-supercede-stdpow-checker

./: CMakeLists.txt  Readme.md  kdab-supercede-stdpow-checker.cpp  supercedestdpow.cpp
